--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="1mwTk8udoq8thgQhEonmYAk1qhG5gpCjUj1sA5kznmM" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Download Traffic Rider with unlimited money for an enhanced gaming experience. Get the latest version now and race without limits!">
     <title>Traffic Rider Unlimited Money - Race Without Limits!</title>
     <meta name="keywords" content="Traffic Rider">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="">
-    <link rel="alternate" hreflang="en" href="">
+    <link rel="canonical" href="https://perfectplayer.vercel.app/">
+    <link rel="alternate" hreflang="en" href="https://perfectplayer.vercel.app/">
     <link rel="icon" href="icon.png" type="image/x-icon">
     
     <script type="application/ld+json">
@@ -17,7 +18,7 @@
             "@type": "WebPage",
             "name": "Traffic Rider Unlimited Money - Race Without Limits!",
             "description": "Download Traffic Rider with unlimited money for an enhanced gaming experience. Get the latest version now and race without limits!",
-            "url": ""
+            "url": "https://perfectplayer.vercel.app/"
         }
         </script>
     <style>
